# prospector

./: .gitignore  CMakeLists.txt  CMakeSettings.json  LICENSE  Makefile  README.md  aureus_crisprs.json  blast.cpp  blast.h  cartograph_interpretation.txt  cas.cpp  cas.h  crispr.cpp  crispr.fa  crispr.fasta  crispr.h  crisprs.json  debug.h  invoker.cpp  main.cpp  nc_007795.matcher  out.txt  profile.cpp  profile.h  prospector-vs.sln  prospector.cpp  prospector.cu  prospector.h  run.sh  seq.cpp  seq.h  stdafx.h  test.cpp  time.h  upstream.fasta  util.cpp  util.h
GenomeAssembly/: CRISPRS_Sep_14.odt  SRA_tool_kit_installation_usage.odt  genome_download_to_phylogeny.odt  use_this_copyhowto_accessi_GB_for_gbk_numbers
Parser/: Parser.sln
Parser/Parser/: Algorithm.cs  Algorithms.cs  Blast.cs  Crispr.cs  Parser.csproj  Program.cs  Sequence.cs  packages.config
Parser/Parser/Properties/: AssemblyInfo.cs
_archived/: Sequence.cpp  prospector_cuda.cu
_archived/prospector_cpp/: Sequence.cpp
_archived/prospector_cs/: App.config
archive/: CMakeLists.txt
blast/: .building  .built  Makefile  Makefile.blast.app  Makefile.blast_app  Makefile.blast_demo.app  Makefile.blast_demo_app  Makefile.builddir  Makefile.in  RUN COMMAND.txt  blast.cpp  blast_demo.cpp
blast_old/: .building  Makefile  Makefile.blast_demo_app  blast_demo.cpp
data/: SpyCRISPR.fasta  SpyCas9.fasta  strep_p9.fasta
foo/: Makefile  Makefile.blast_demo_app  Makefile.builddir  Makefile.foo_app  Makefile.in  Makefile.remote_blast_demo_app  Makefile.vsrun_sample_app  blast_demo.cpp  foo.cpp  remote_blast_demo.cpp  stdout  vsrun_sample.cpp
headers/: array_discovery.h  cas.h  cas_profiles.h  stdafx.h
include/: array_discovery.h  cas.h  cas_helpers.h  cas_profiles.h  config.h  crispr.h  cuda_helpers.h  cuda_include.h  debug.h  locus.h  path.h  prospector.h  stdafx.h  system.h  time_util.h  util.h
invoker/: Makefile  invoker.cpp
lib/fmt/: format-inl.h
lib_test/: Makefile  lib_test.cpp  lib_test.hpp
parser_cpp/: parser_cpp.sln
parser_cpp/parser_cpp/: Crispr.cpp  Crispr.h  Sequence.cpp  Sequence.h  Sequence_.h  consts.h  parser_cpp.cpp  parser_cpp.cu  parser_cpp.vcxproj  parser_cpp.vcxproj.filters
parser_cpp/parser_cpp/parser_cpp/: parser_cpp.cpp  parser_cpp.vcxproj
parser_cpp/parser_sequential/: Sequence.cpp  consts.h  parser_cpp.cpp  parser_sequential.vcxproj  parser_sequential.vcxproj.filters
phage/: pyogenes_spacers.fa
prospector/: Makefile  Sequence.cpp  Sequence.h  main.cpp  prospector.cu  prospector.h  prospector.sln  prospector.vcxproj  prospector.vcxproj.filters  prospector_cuda.vcxproj.filters  stdafx.h  util.cpp  util.cu  util.h  util.inl
prospector-vs/: array_discovery.cpp  array_discovery.h  cas.cpp  cas.h  cas_profiles.cpp  cas_profiles.h  crispr.cpp  crispr.h  debug.cpp  debug.h  locus.h  main.cpp  phmap_base.h  prospector-vs.vcxproj  prospector-vs.vcxproj.filters  prospector.cu  prospector.h  serializer.cpp  stdafx.h  util.cpp  util.h
prospector/prospector_cpp/: Crispr.cpp  Crispr.h  Sequence.h  prospector_cpp.cpp  prospector_cpp.vcxproj  prospector_cpp.vcxproj.filters
prospector/prospector_cs/: Crispr.cs  Program.cs  prospector_cs.csproj
prospector/prospector_cuda/: Makefile  Sequence.cpp  consts.h  prospector.cu  prospector_cpp.vcxproj.filters  prospector_cuda.cu  prospector_cuda.vcxproj  prospector_cuda.vcxproj.filters
prospector/prospector_cuda/data/: test.fasta
prospector/prospector_sequential/: Sequence.h  prospector_cpp.cpp
prospector_cpp/: parser_cpp.sln
prospector_cpp/prospector_cpp/: Crispr.cpp  Sequence.h  Sequence_.cpp  prospector_cpp.cu  prospector_cpp.vcxproj
prospector_cpp/prospector_sequential/: Crispr.h  prospector_sequential.filters  prospector_sequential.vcxproj
prospector_cs/: prospector.sln
prospector_cs/prospector/: Crispr.cs  Program.cs  Sequence.cs  visual.csproj
prospector_cs/prospector/Properties/: AssemblyInfo.cs
src/: array_discovery.cpp  cas.cpp  cas.cu  cas_helpers.cpp  cas_profiles.cpp  config.cpp  crispr.cpp  debug.cpp  main.cpp  prospector.cu  util.cpp
src/cu/: cas.cu  cas_helpers.cu  cuda_helpers.cu
src/unused/: experiments.cpp
util/: Makefile  stdafx.h  util.cpp  util.h
